--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
       <option value="Tour">Giving a Tour</option>
       <option value="Eating">Lunch/Dinner</option>
       <option value="Sick">I am feeling sick</option>
+      <option value="Other">Other</option>
     </select>
   </p>
 
