Updating the looks
Added new image and fixed some stuff

--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
 
 <style>
 .foo {
+  position: relative;
+  background:image-set();
   float:right;
-  width: 1307px;
-  height: 51px;
+  width: 1400px;
+  height: 50px;
 }
 
 .green {
@@ -26,14 +28,13 @@
 </style>
 
 <div id="NWPic">
-  <img src="Northwest.png" width = "40" height = "50" class="ribbon"/>
+  <img src="NWLogo.jpg" width = "175" height = "50" class="ribbon"/>
 </div>
 
 <style>
 #NWPic {
-  border: 1px solid;
-  border-right: -5px solid;
-  border-color: green;
+  position: absolute;
+  margin-left: 0px;
 }
 </style>
 
