Created the login page
OOOOH YEAH

--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@ This is the baseline for the webpage
   position: relative;
   background:image-set();
   float:right;
-  width: 1400px;
+  width: 1450px;
   height: 50px;
+  left: 0%;
 }
 
 .green {
