--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@ This is the baseline for the webpage
       #btnDelete {
         position:relative;
         border: 1px solid black;
+        left: 36%;
       }
       </style>
 
